--- a/src/components/visualizer/visualizer.module.css
+++ b/src/components/visualizer/visualizer.module.css
@@ -1,3 +1,29 @@
-.main {
-    background-color: red;
+.container {
+    position: absolute;
+    border: 2px solid;
+    padding: 8px;
+    border-radius: 8px;
+    height: 600px;
+    width: 400px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    margin: 8px;
+    max-width: 80%;
+    max-height: 80%;
+}
+
+.canvasContainer {
+    touch-action: none;
+    height: 100%;
+    width: 100%;
+}
+
+.headerSection {
+    display: flex;
+
+}
+
+.title {
+    text-align: center;
+    font-size: large;
+    flex: 1
 }
